# humanoid_catching

./: .gitignore  CMakeLists.txt  README.md  TODO  cleanup.sh  controller_plugins.xml  human_catching.cbp  humanoid_catching.cbp  load_models.sh  package.xml  pr2_arms_force_controller.yaml  run_one_scenario.sh  run_scenario.sh
CMakeModules/: FindGperftools.cmake  FindMoby.cmake  FindQPOASES.cmake
action/: CatchHuman.action  MoveArmFast.action
include/human_catching/: force_controller.hpp
include/humanoid_catching/: catch_human_action_server.h  catch_human_controller.h  force_controller.hpp
launch/: activate_force_controllers.launch  arm_controller_tester_fc.launch  arm_controller_tester_moveit.launch  human_catching.launch  human_catching_robot.launch  human_catching_simulated.launch  ik_tester.launch  imu.launch  l_arm_force_controller.launch  no_catching_simulated.launch  r_arm_force_controller.launch  reset_arms.launch  spawn_human.launch  spawn_models.launch  start_force_controller.launch
models/: .~lock.intertia_matrix.ods#  human.model  human_massive.model  intertia_matrix.ods  pr2.urdf
msg/: Contact.msg  DurationStamped.msg  FallPoint.msg  ForceControllerFeedback.msg  IKMetric.msg  IMU.msg  Limit.msg  Link.msg  Move.msg  MovementGoal.msg  Shape.msg
rviz/: display.rviz
src/: announced_fall_detector.cpp  arm_controller_tester.cpp  arm_controller_tester_fc.cpp  balancer.cpp  calc_ee_bb.cpp  catch_human_action_server.cpp  catch_human_controller.cpp  catching_controller.cpp  fake_human_imu.cpp  fall_predictor.cpp  fall_readiness.cpp  fall_starter.cpp  fall_stats_plugin.cpp  fall_stats_recorder.cpp  force_controller.cpp  ik_tester.cpp  imu_filter.cpp  imu_gaussian_noise.cpp  imu_integrator.cpp  imu_visualizer.cpp  metrics_recorder.cpp  move_arm_fast_action_server.cpp  move_arms_to_base_positions.cpp  on_ground_detector.cpp  ros_bag_recorder.cpp  simulated_fall_detector.cpp
srv/: CalculateTorques.srv  CreateMeshCache.srv  PredictFall.srv
test/: test_catch_human_action_server.cpp  test_catch_human_controller.cpp  test_fall_predictor.cpp  test_fall_predictor.test
